<resources>
    <string name="app_name">Number Game</string>
    <string name="game_name">Состав Числа</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
        из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="start_game">Начать Игру</string>
    <string name="test">TEST</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="choose_level_of_game">Выберите Сложность</string>
    <string name="try_again">Попробовать ЕЩЕ РАЗ</string>
    <string name="start">START</string>
    <string name="start_time">00:00</string>
</resources>