<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/chooseLevelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_level_of_game"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        >

    </TextView>
    <TextView
        android:id="@+id/testTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"


        >

    </TextView>
    <TextView
        android:id="@+id/easyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:textColor="@color/white"
        android:background="@color/easy_game"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        >

    </TextView>
    <TextView
        android:id="@+id/mediumTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:textColor="@color/white"
        android:background="@color/medium_game"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        >

    </TextView>
    <TextView
        android:id="@+id/hardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:textColor="@color/white"
        android:background="@color/hard_game"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        >

    </TextView>



</LinearLayout>