<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/brainImageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gameNameTExtView"
            android:src="@drawable/brain"
            >

        </ImageView>

        <TextView
            android:id="@+id/gameNameTExtView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brainImageView"

            android:text="@string/game_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            >

        </TextView>
        <TextView
            android:id="@+id/gameRulesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gameNameTExtView"
            android:layout_margin="8dp"

            android:text="@string/game_rules"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            >

        </TextView>
        <Button
            android:id="@+id/startGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gameRulesTextView"
            app:layout_constraintBottom_toBottomOf="parent"

            android:text="@string/start_game"
            >

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>